<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="apikey">0f4XfHYCKAZQQK3u7P8agGqaf9YzOLJwg6siVog</string>
    <string name="app_name" translatable="false">SmartActions</string>
    <string name="active_smart_actions">Active SmartActions</string>
    <string name="about_text">Simplify your life by automating actions you do every day. SmartActions can silence your ringer when you\'re in a meeting, send a text message when you arrive at a location, or make sure you never miss an important call.</string>
    <string name="about_text_2">SMART<b>ACTIONS</b> simplifies your life by automating the things you do every day.</string>
    <string name="about_version">Version</string>
    <string name="about_copyright">\u00A9 2012 Motorola Mobility Inc. Version %1s</string>
    <string name="learn_more">Learn more</string>
    <string name="get_started">Get started</string>
    <string name="next">Next</string>
    <string name="samples">Samples</string>
    <string name="my_rules">My SmartActions</string>
    <string name="blank_rule">Custom</string>
    <string name="blank_rule_subtext">Create a new SmartAction from scratch.</string>
    <string name="blank_rule_header">CREATE YOUR OWN</string>
    <string name="suggestion_header">SUGGESTIONS FOR YOU</string>
    <string name="samples_header">SAMPLES</string>
    <string name="auto_header">MY SMARTACTIONS</string>
    <string name="manual_header">MY MANUAL ACTIONS</string>
    <string name="teach_title">What is SMART<b>ACTIONS</b>?</string>
    <string name="teach_text">SMART<b>ACTIONS</b> helps you automate things you do every day.\n\nFor example, you can use a SmartAction to silence your ringer when you\'re in a meeting or send a text message when you arrive at a location.\n\nBased on how you use your phone, you may get a suggestion to adopt a SmartAction that will help you.\n\nThere are also sample SmartActions that you can browse and add to your collection.\n\nIf you\'re feeling creative, you can even make your own SmartAction. Simply tell SMART<b>ACTIONS</b> what you want to do and when you want it to happen.</string>
    <string name="check_status_title">Set by SmartActions</string>
    <string name="copy_rule_title">Select a SmartAction to copy</string>
    <string name="preset_rules">Sample SmartActions</string>
    <string name="settings_title">Settings</string>
    <string name="add_rule_title">Add a new SmartAction</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="debug">Debug</string>
    <string name="debug_default">Debug default rule</string>
    <string name="show_conflicts">Show active conflicts</string>
    <string name="show_possible_conflicts">Show possible conflicts</string>
    <string name="disable">Disable</string>
    <string name="about_image_desc">About image</string>
    <string name="logo_image_desc">Motorola Mobility</string>
    <string name="block_connector_image_desc">Block connector</string>
    <string name="block_status_ind_image_desc">Block status indicator</string>
    <string name="block_icon_image_desc">Action or Trigger icon</string>
    <string name="block_connector_bar_image_desc">Block connector bar</string>
    <string name="line_divider_image_desc">Line divider</string>
    <string name="rule_icon_image_desc">Rule icon</string>
    <string name="setting_icon_image_desc">Setting icon</string>
    <string name="activity_icon_image_desc">Activity icon</string>
    <string name="contact_photo_image_desc">Contact photo</string>
    <string name="drivemode_icon_image_desc">Drive Smart Icon</string>
    <string name="suggestion_image_desc">Suggestion Icon</string>
    <string name="suggestion_row_image_desc">Suggestion List Icon</string>
    <string name="bullet_image_desc">Bullet Image</string>
    <string name="bt_image_desc">Bluetooth Icon</string>
    <string name="dock_image_desc">Dock Icon</string>
    <string name="list_item_icon_desc">List Item Icon</string>
    <string name="about_title">About SmartActions</string>
    <string name="delete_rule">Delete this SmartAction</string>
    <string name="delete_rule_message">Are you sure you wish to delete this SmartAction?\n\nThis action cannot be undone.</string>
    <string name="deleting_rule">Deleting SmartAction&#8230;</string>
    <string name="rule_deleted">SmartAction deleted</string>
    <string name="disabling_all">Disabling all SmartActions&#8230;</string>
    <string name="rules_disabled">All SmartActions disabled</string>
    <string name="copying_rule">Loading&#8230;</string>
    <string name="copy_failed">Copying of rule failed</string>
    <string name="discard_changes">Discard changes</string>
    <string name="discard_rule_message">You have edited this SmartAction.\n Would you like to save these changes before leaving?</string>
    <string name="changes_discarded">Changes discarded</string>
    <string name="manual_rule_confirmation_msg">Without Triggers, you will need to turn this SmartAction on and off manually.</string>
    <string name="manual_title">Manual actions</string>
    <string name="location_consent">This trigger requires that you agree to allow Motorola to detect your location using Wi-Fi and Google location services.</string>
    <string name="location_title">Location consent</string>
    <string name="empty_rule_name">Title cannot be left blank. Reverting to previous name.</string>
    <string name="max_visible_ena_auto_rules">You have reached the limit of 30 enabled automatic SmartActions. Disable at least one enabled SmartAction to continue.</string>
    <string name="add">Add</string>
    <string name="enable">Enable</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="discard">Discard</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="continue_prompt">Continue</string>
    <string name="iam_done">I\'m done</string>
    <string name="conflict">Conflict</string>
    <string name="suggestion">Suggestion</string>
    <string name="error">Error - Touch for info</string>
    <string name="manual">Manual</string>
    <string name="added">Added</string>
    <string name="active">Active</string>
    <string name="ready">Ready</string>
    <string name="press_enable">Touch icon to enable</string>
    <string name="starting_up">Starting up&#8230;</string>
    <string name="shutting_down">Shutting down&#8230;</string>
    <string name="loading_rule">Loading&#8230;</string>
    <string name="last_active">"Ready - Last active "</string>
    <string name="check_status">Check status</string>
    <string name="about">About</string>
    <string name="profile">My profile</string>
    <string name="help">Help</string>
    <string name="disable_all">Disable all</string>
    <string name="settings">Settings</string>
    <string name="copy_rule">Copy an existing SmartAction</string>
    <string name="locations">I\&apos;m at a specific location</string>
    <string name="locations_title">Locations</string>
    <string name="locations_summary">Places important to you</string>
    <string name="timeframes">Timeframes</string>
    <string name="timeframes_summary">Times important to you</string>
    <string name="TFHeading">Timeframes important to you</string>
    <string name="settings_prefs">Settings Preference</string>
    <string name="rule_status_notifications">Status notifications</string>
    <string name="rule_status_notifications_summary">Display status in ongoing notifications</string>
    <string name="suggestion_notifications">Suggestion notifications</string>
    <string name="suggestion_notifications_summary">New suggestions appear in notifications</string>
    <string name="popup_suggestions">Pop-up suggestions</string>
    <string name="popup_suggestions_summary">Important suggestions will pop-up over any application</string>
    <string name="ca_enabled">Enable Context Aware</string>
    <string name="mot_loc_services">Motorola location services</string>
    <string name="mot_loc_services_summary">Uses data from Wi-Fi and mobile networks to determine your approximate location even when Wi-Fi is disabled</string>
    <string name="app_name_exp">RulesExporterImporter</string>
    <string name="export_rules">Export SmartActions</string>
    <string name="canned_rules">Activate SmartActions</string>
    <string name="import_rules">Import SmartActions</string>
    <string name="import_precanned_rules">Import pre-canned SmartActions</string>
    <string name="choose_mode">Choose a mode</string>
    <string name="rules_exported_pass">SmartActions exported successfully</string>
    <string name="rules_exported_fail">Exporting SmartActions failed</string>
    <string name="edit_icon">Edit icon</string>
    <string name="rename">Rename</string>
    <string name="rule_name">New SmartAction</string>
    <string name="rule_icons">SmartAction icons</string>
    <string name="triggers">Triggers</string>
    <string name="actions">Actions</string>
    <string name="trigger_text">Touch the plus sign to add triggers and make this SmartAction automatic.</string>
    <string name="action_text">Touch the plus sign to add actions to your SmartAction.</string>
    <string name="no_avail_triggers">"There are no available triggers.</string>
    <string name="no_avail_actions">"There are no available actions.</string>
    <string name="description">Needs to be configured</string>
    <string name="status">Touch here to add</string>
    <string name="suggested">Suggested</string>
    <string name="install">Touch here to download</string>
    <string name="saving_rule">Saving SmartAction, please wait&#8230;</string>
    <string name="changin_rule_state">Changing SmartAction state, please wait&#8230;</string>
    <string name="error_reason">Reason unknown</string>
    <string name="no_nw_provider">Google location services not enabled</string>
    <string name="no_ada_accepted_key">Context Privacy Opt-in not checked</string>
    <string name="please_wait">Loading, please wait&#8230;</string>
    <string name="rule_string">SmartAction</string>
    <string name="new_string">New</string>
    <string name="end_of_rule">When SmartAction ends</string>
    <string name="manual_rule">Manual SmartAction</string>
    <string name="block_action_edit">Edit</string>
    <string name="block_action_enable">Enable</string>
    <string name="block_action_disable">Disable</string>
    <string name="block_action_delete">Delete</string>
    <string name="empty_string"></string>
    <string name="start">Press to import Additional SmartActions</string>
    <string name="IM">Inference Manager</string>
    <string name="Infer_additional">Infer Additional SmartActions</string>
    <string name="confirm">Confirm</string>
    <string name="change_location">Change location</string>
    <string name="loc_name">Location Name</string>
    <string name="loc_name_title">LOCATION NAME</string>
    <string name="loc_details">LOCATION DETAILS</string>
    <string name="time_frame_name_title">Name</string>
    <string name="timeframe_repeat">Days of the week</string>
    <string name="all_day_event">All day event</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="add_time_frame">Add a timeframe</string>
    <string name="timeframe_name_preference">Timeframe Name Preference</string>
    <string name="repeat_pref">Repeat Preference</string>
    <string name="s_time">Start Time Preference</string>
    <string name="e_time">End Time Preference</string>
    <string name="all_day_event_pref">All Day Event Preference</string>
</resources>