<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical">
	
	<TextView  
	android:id="@+id/tvStatic"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/IM"
    android:gravity="center_vertical|center_horizontal"
    android:layout_weight="1"/>
    
	<Button 
	android:layout_height="wrap_content" 
	android:id="@+id/bAdditional" 
	android:text="@string/Infer_additional"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_marginTop="5dip"
	android:layout_marginLeft="5dip"
	android:layout_marginRight="5dip"/>
	
	<TextView  
	android:id="@+id/tvMain"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/start"
    android:gravity="center_vertical|center_horizontal"
    android:layout_weight="1"/>
	
	
</LinearLayout>

